--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -9,6 +9,7 @@
     <div id="content">
       <table>
         <tr>
+          <th>Real Name</th>
           <th>Name</th>
           <th>Score</th>
           <th>Species</th>
