--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -17,6 +17,7 @@
         </tr>
         {{#each morgues}}
           <tr>
+            <td>{{ real_name }}</td>
             <td>{{ name }}</td>
             <td>{{ score }}</td>
             <td>{{ race }}</td>
