Add missing quotes

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -16,7 +16,7 @@
         </tr>
         {{#each morgues}}
           <tr>
-            <td><span title={{ real_name }}>{{ name }}</span></td>
+            <td><span title="{{ real_name }}">{{ name }}</span></td>
             <td>{{ score }}</td>
             <td>{{ race }}</td>
             <td>{{ background }}</td>
