--- a/static/index.css
+++ b/static/index.css
@@ -23,6 +23,6 @@ tr:nth-child(even) td { background: #F1F1F1; }
 tr:nth-child(odd) td { background: #FEFEFE; }
 
 th {  
-  background: #DFDFDF;  /* Darken header a bit */
+  background: #DFDFDF;
   font-weight: bold;
 }
