--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -13,6 +13,7 @@
           <th>Score</th>
           <th>Species</th>
           <th>Background</th>
+          <th>God</th>
         </tr>
         {{#each games }}
           <tr>
@@ -20,6 +21,7 @@
             <td>{{ score }}</td>
             <td>{{ species }}</td>
             <td>{{ background }}</td>
+            <td>{{ god }}</td>
           </tr>
         {{/each}}
       </table>
